--- a/themes/kurtpaullevy-understrap-child/src/sass/theme/_front_page_footer.scss
+++ b/themes/kurtpaullevy-understrap-child/src/sass/theme/_front_page_footer.scss
@@ -1,5 +1,4 @@
 @use 'child_theme_variables' as *;
-@use 'button_front_page_variant';
 
 body.home {
 
@@ -7,8 +6,10 @@ body.home {
         position: absolute;
         top: 100vh;
         width: 100%;
-        background-color: #DD5902;
-        color: #FFFFFF;
+        background-color: rgba(230, 230, 230, 0.7);
+        -webkit-backdrop-filter: blur(53px);
+        backdrop-filter: blur(53px);
+        color: $black;
         font-family: $font-family-light;
         padding-top: 5.625rem;
         font-size: $font-size-sm;
@@ -24,11 +25,6 @@ body.home {
         line-height: 20px;
     }
 
-    & .form-control {
-        border-bottom: 1px solid #FFFFFF;
-        color: #FFFFFF;
-    }
-
     & #index-wrapper {
         //position: fixed;
     }
@@ -37,12 +33,8 @@ body.home {
         background-color: transparent;
     }
 
-    & ::placeholder {
-        color: #FFFFFF;
-    }
-
     & #email-help-block {
-        color: #FFFFFF;
+        color: inherit;
     }
 }
 
@@ -58,6 +50,16 @@ body.home {
 
         & #wrapper-footer {
             margin: 0;
+            padding-top: 2.75rem;
+        }
+
+        & .site-footer {
+            margin: 7.188rem 0 1.5rem;
+            padding: 0;
+        }
+
+        #contact-form {
+            margin-top: 0
         }
     }
 }
